--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "mysql2": "^3.6.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
